--- a/frontend_admin/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/frontend_admin/src/main/resources/templates/admin/fragments/sidebar.html
@@ -16,19 +16,13 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" th:href="@{/admin/users}">
+        <a class="nav-link text-dark" th:href="@{/admin/student}">
           <i class="material-symbols-rounded opacity-5">table_view</i>
           <span class="nav-link-text ms-1">Danh sách người dùng</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" th:href="@{/admin/student}">
-          <i class="material-symbols-rounded opacity-5">table_view</i>
-          <span class="nav-link-text ms-1">Danh sách sinh viên</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-dark" href="../pages/tables.html">
+        <a class="nav-link text-dark" th:href="@{/admin/rooms}">
           <i class="material-symbols-rounded opacity-5">table_view</i>
           <span class="nav-link-text ms-1">Phòng</span>
         </a>
