--- a/frontend_student/src/main/resources/templates/student/profile.html
+++ b/frontend_student/src/main/resources/templates/student/profile.html
@@ -167,7 +167,8 @@
 
           <!-- actions -->
           <div class="d-flex justify-content-center gap-3 mt-4">
-            <button type="button" id="updateBtn" class="btn btn-warning fw-bold"> Cập nhật thông tin</button>pull
+            <button type="button" id="backBtn" class="btn btn-outline-primary fw-bold"> <i class="bi bi-arrow-left"></i>Trở về</button>
+            <button type="button" id="updateBtn" class="btn btn-warning fw-bold"> Cập nhật thông tin</button>
             <button type="button" id="saveBtn" class="btn btn-success d-none"> Lưu</button>
             <button type="button" id="cancelBtn" class="btn btn-outline-secondary d-none">Hủy</button>
             <button type="button" id="changePasswordBtn" class="btn  btn-danger fw-bold"> Đổi mật khẩu</button>
@@ -432,6 +433,12 @@
   });
 
   window.onload = loadProfile;
+
+  // --- NÚT TRỞ VỀ ---
+  document.getElementById("backBtn").addEventListener("click", () => {
+    window.location.href = "http://localhost:8081/";
+  });
+
 </script>
 </body>
 </html>
