--- a/frontend_admin/src/main/resources/templates/admin/fragments/head.html
+++ b/frontend_admin/src/main/resources/templates/admin/fragments/head.html
@@ -11,10 +11,9 @@
   <!-- Nucleo Icons -->
   <link th:href="@{/assets/css/nucleo-icons.css}" rel="stylesheet" />
   <link th:href="@{/assets/css/nucleo-svg.css}" rel="stylesheet" />
-  <!-- Font Awesome Icons -->
-  <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-  <!-- Material Icons -->
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
   <!-- CSS Files -->
   <link id="pagestyle" th:href="@{/assets/css/material-dashboard.css?v=3.2.0}" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
