--- a/frontend_admin/src/main/resources/templates/admin/Student/listStudent.html
+++ b/frontend_admin/src/main/resources/templates/admin/Student/listStudent.html
@@ -105,6 +105,7 @@
                 showPopup(err, true);
                 return;
               }
+              return response.json();
             })
             .then(data => {
               allstudents = data;
