dang ky dorm thanh cong

--- a/frontend_admin/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/frontend_admin/src/main/resources/templates/admin/fragments/sidebar.html
@@ -16,6 +16,12 @@
         </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link text-dark" th:href="@{/admin/dorm}">
+          <i class="material-symbols-rounded opacity-5">table_view</i>
+          <span class="nav-link-text ms-1">Quản lý đăng ký nội trú</span>
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link text-dark" th:href="@{/admin/student}">
           <i class="material-symbols-rounded opacity-5">table_view</i>
           <span class="nav-link-text ms-1">Danh sách người dùng</span>
