--- a/frontend_student/src/main/resources/templates/fragments/sidebar.html
+++ b/frontend_student/src/main/resources/templates/fragments/sidebar.html
@@ -34,7 +34,7 @@
             </span>
         </a>
         <ul class="treeview-menu">
-          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Đăng ký nội trú</a></li>
+          <li><a th:href="@{/dorm-register}"><i class="fa fa-circle-o"></i>Đăng ký nội trú</a></li>
           <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Hóa đơn</a></li>
           <li><a th:href="@{/rooms}"><i class="fa fa-circle-o"></i>Phòng</a></li>
           <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Liên hệ</a></li>
